--- a/academics.html
+++ b/academics.html
@@ -272,7 +272,7 @@
       <li>
     <dl>
                 <dt>
-                  Computer Organization and Architecture Lab
+                  Computer Organization and Architecture lab
     </dt>
     <dd style="font-size:14px">
   <!--
