adding dblp and google scholar links

--- a/index.html
+++ b/index.html
@@ -144,6 +144,9 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     </a>
 <hr>
 
+<!-- Removing the display of last updated date -->
+<!--
+
   <div align="left">
 
   <p id="P1">
@@ -176,7 +179,7 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     </script>  
   </p>
   </div>
-
+  -->
 
   </div>
 
