--- a/research.html
+++ b/research.html
@@ -112,7 +112,13 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 </p> -->
 
 <p style="color:black">
-<h3><u>Publications</u> </h3> 
+<h3><u>Publications</u>
+ <span style="float:right;font-weight:bold; font-size:18px;">
+ [<a href= "https://dblp.uni-trier.de/pers/hd/s/Singh:Somesh" target="_blank"> (DBLP)</a>, 
+ <a href= "https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank"> (Google Scholar)</a> ]
+ </span>
+ </h3>
+
 </p>
 
 <h3 style="font-size: 16pt">
