--- a/misc.html
+++ b/misc.html
@@ -156,6 +156,15 @@
 
 <li>
 <dl>
+        Reviewer for <em>INAE Letters</em> 
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2018
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
         Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
 </dl>
 </li>
