--- a/research.html
+++ b/research.html
@@ -125,7 +125,7 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in IEEE TMSCS 2018.</h4>
+<h4 style="font-size: 13pt">in IEEE TMSCS 2018. <span style="font-size: 11pt">  <a href="https://doi.org/10.1109/TMSCS.2018.2795543" target="_blank">(doi)</a> </span> </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
    (abstract) 
