--- a/research.html
+++ b/research.html
@@ -125,13 +125,14 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in IEEE TMSCS 2018. <span style="font-size: 11pt">  <a href="https://doi.org/10.1109/TMSCS.2018.2795543" target="_blank">(doi)</a> </span> </h4>
+<h4 style="font-size: 13pt">in IEEE TMSCS 2018. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#tmscs" aria-expanded="false" aria-controls="tmscs">
    (abstract) 
   </a>
 
   <a href="docs/papers/tmscs.pdf" target="_blank">(pdf)</a>
+  <a href="https://doi.org/10.1109/TMSCS.2018.2795543" target="_blank">(doi)</a>
 </p>
 <p class="collapse" id="tmscs" style="font-size: 11pt">
 Graph algorithms are widely used in several application domains. It has been established that parallelizing graph
@@ -156,6 +157,7 @@ benefits. We also study the effects of the approximations on GPU-based processin
    </a>
  
    <a href="docs/papers/icap18.pdf" target="_blank">(pdf)</a> 
+   <a href="https://doi.org/10.18429/JACoW-ICAP2018-TUPAF02" target="_blank">(doi)</a>
  </p>
  
  <p class="collapse" id="icap" style="font-size: 11pt">
@@ -185,7 +187,7 @@ Optimizing Graph Processing on GPUs using Approximate Computing: Poster
   </a>
 
   <a href="docs/papers/ppopp19.pdf" target="_blank">(pdf)</a>
-
+  <a href="https://doi.org/10.1145/3293883.3295736" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="ppopp19" style="font-size: 11pt">
