--- a/index.html
+++ b/index.html
@@ -134,14 +134,29 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
         <!-- /.row -->
 <hr />
 
-<div align="right">
+<div>
+<span style="float:left">
+    <a href="https://github.com/ssomesh/" target="_blank">
+
+     <img 
+          src="img/GitHub-Mark-32px.png"
+          width="32" border="0" alt="View Somesh Singh's GitHub Repository">
+     <img 
+          src="img/GitHub-Logo.png"
+          width="80" border="0" alt="View Somesh Singh's GitHub Repository">
+
+    </a>
+</span>
+<span style="float:right">
     <a href="https://www.linkedin.com/in/somesh-singh-17aab053" target="_blank">
 
      <img
           src="img/btn_linkedin_160x25.png"
-          width="160" height="25"  border="0" alt="View Somesh Singh's profile on LinkedIn">
+          border="0" alt="View Somesh Singh's profile on LinkedIn">
 
     </a>
+</span>
+
 <hr>
 
 <!-- Removing the display of last updated date -->
