--- a/index.html
+++ b/index.html
@@ -139,6 +139,9 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     <a href="https://github.com/ssomesh/" target="_blank">
 
      <img 
+          src="img/GitHub-Mark-32px.png"
+          width="32" border="0" alt="View Somesh Singh's GitHub Repository">
+     <img 
           src="img/GitHub-Logo.png"
           width="80" border="0" alt="View Somesh Singh's GitHub Repository">
 
@@ -154,7 +157,6 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     </a>
 </span>
 
-<hr>
 
 <!-- Removing the display of last updated date -->
 <!--
