--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 	  Ph: +91 9791264972<br/>
     Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
 	</p>
-
+        <p>
+	   <b>I am currently on the job market (expected graduation: July 2020).</b> 
+	</p>
         </div>
       
 
