--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
     Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
 	</p>
         <p>
-	   <b>I am currently on the job market (expected graduation: July 2020).</b> 
+	   <b>I am currently on the job market.</b> <!-- (expected graduation: July 2020) --> 
 	</p>
         </div>
       
