few more accomplishments added

--- a/misc.html
+++ b/misc.html
@@ -98,6 +98,28 @@
 <ul>
 
 <li>
+<dl>
+     Committee Member in 
+  <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank"> 
+       Artifact Evaluation Committee </a>
+     for 
+  <a href= "https://2020.ecoop.org/" target="_blank"> 
+        ECOOP 2020 </a>
+	
+</dl>
+</li>
+
+
+<li>
+<dl>
+  Awarded <em>ACM SIGPLAN PAC</em> grant for attending PPoPP 2019. 
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2019
+  </span>
+</dl>
+</li>
+
+<li>
  <dl>
       Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
       <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
