--- a/misc.html
+++ b/misc.html
@@ -112,7 +112,8 @@
 
 <li>
 <dl>
-  Awarded <em>ACM SIGPLAN PAC</em> grant for attending PPoPP 2019. 
+  Awarded <em>ACM SIGPLAN PAC</em> grant for attending 
+  <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     2019
   </span>
