--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 </ul>
  -->
         <p>
-	Welcome! I am a Ph.D. student at the department of 
+	Welcome! I am a Ph.D. student in the department of 
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
 Computer Science and Engineering 
 </a>
