--- a/research.html
+++ b/research.html
@@ -206,7 +206,7 @@ Our approximations for coalescing, memory latency and thread-divergence lead to 
  <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, </i> <!-- <i>et al.</i>  --> </h4>
- <h4 style="font-size: 13pt">in International Journal of Modern Physics A 2019.</h4>
+ <h4 style="font-size: 13pt">in International Journal of Modern Physics A (2019).</h4>
  <p style="font-size: 11pt">
    <a data-toggle="collapse" href="#ijmpa" aria-expanded="false" aria-controls="ijmpa">
     (abstract) 
@@ -216,7 +216,7 @@ Our approximations for coalescing, memory latency and thread-divergence lead to 
    <a href="https://doi.org/10.1142/S0217751X19420351" target="_blank">(doi)</a>
  </p>
  
- <p class="collapse" id="icap" style="font-size: 11pt">
+ <p class="collapse" id="ijmpa" style="font-size: 11pt">
 SixTrack is a single-particle tracking code for high-energy circular accelerators routinely used at CERN for the Large Hadron Collider (LHC), its luminosity upgrade (HL-LHC), the Future Circular Collider (FCC) and the Super Proton Synchrotron (SPS) simulations. 
 The code is based on a 6D symplectic tracking engine, which is optimized for long-term tracking simulations and delivers fully reproducible results on several platforms. 
 It also includes multiple scattering engines for beam–matter interaction studies, as well as facilities to run the integrated simulations with external particle matter interaction codes.
