--- a/research.html
+++ b/research.html
@@ -206,7 +206,7 @@ Our approximations for coalescing, memory latency and thread-divergence lead to 
  <h4 style="font-size: 13pt"><font color="#696969">with</font> <i> R. De Maria, J. Andersson, V.K. Berglyd Olsen, L. Field, M. Giovannozzi, P. D. Hermes, N. H&#248imyr,
  S. Kostoglou, G. Iadarola, E. Mcintosh, A. Mereghetti, J. Molson, D. Pellegrini,
  T. Persson, M. Schwinzerl, E.H. Maclean, K.N. Sjobak, I. Zacharov, </i> <!-- <i>et al.</i>  --> </h4>
- <h4 style="font-size: 13pt">in International Journal of Modern Physics A 2019.</h4>
+ <h4 style="font-size: 13pt">in International Journal of Modern Physics A 2019. (Invited Paper)</h4>
  <p style="font-size: 11pt">
    <a data-toggle="collapse" href="#ijmpa" aria-expanded="false" aria-controls="ijmpa">
     (abstract) 
