--- a/misc.html
+++ b/misc.html
@@ -99,6 +99,15 @@
 
 <li>
 <dl>
+  Received <em>Google Cloud Platform </em>research credits.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    April 2020
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
      Committee Member in 
   <a href= "https://2020.ecoop.org/committee/ecoop-2020-artifacts-artifact-evaluation-committee" target="_blank"> 
        Artifact Evaluation Committee </a>
