--- a/misc.html
+++ b/misc.html
@@ -99,7 +99,10 @@
 
 <li>
 <dl>
-  Received <em>Google Cloud Platform </em>research credits.
+  Received 
+  <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
+     <em>Google Cloud Platform </em></a>
+  research credits.
   <span style="float:right;font-weight:normal; font-style:italic">
     2020
   </span>
