--- a/misc.html
+++ b/misc.html
@@ -99,7 +99,7 @@
 
 <li>
 <dl>
-  Received 
+  Awarded 
   <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
      <em>Google Cloud Platform </em></a>
   research credits.
