--- a/research.html
+++ b/research.html
@@ -230,6 +230,34 @@ SixTrackLib is a new library aimed at providing a portable and flexible tracking
 This contribution presents the status of the code, summarizes the main existing features and provides details about the main development lines SixTrack, SixDesk and SixTrackLib.
  </p>
 
+
+<h3 style="font-size: 16pt">
+Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
+</h3>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
+<h4 style="font-size: 13pt">in ICPP 2020. (<em>To Appear</em>)</h4>
+<p style="font-size: 11pt">
+  <a data-toggle="collapse" href="#icpp20" aria-expanded="false" aria-controls="icpp20">
+   (abstract) 
+  </a>
+
+  <a href="docs/papers/icpp20.pdf" target="_blank">(pdf)</a>
+  <a href="https://doi.org/10.1145/3404397.3404406" target="_blank">(doi)</a>
+</p>
+
+<p class="collapse" id="icpp20" style="font-size: 11pt">
+Parallelizing graph algorithms on GPUs is challenging due to the irregular memory accesses involved in graph traversals. In particular,
+three important GPU-specific aspects affect performance: memory coalescing, memory latency, and thread divergence. In this work,
+we attempt to tame these challenges using approximate computing. We target graph applications on GPUs that can tolerate some degra-
+dation in the quality of the output for obtaining the result in short order. We propose three techniques for boosting the performance
+of graph processing on the GPU by injecting approximations in a controlled manner. The first one creates a graph isomorph that
+brings relevant nodes nearby in memory and adds controlled replica of nodes to improve coalescing. The second reduces memory la-
+tency by facilitating the processing of subgraphs inside shared memory by adding edges among specific nodes and processing
+well-connected subgraphs iteratively inside shared-memory. The third technique normalizes degrees across nodes assigned to a warp
+to reduce thread divergence. Each of the techniques offers notable performance benefits, and provides a knob to control the amount of
+inaccuracy added to an execution. We demonstrate the effectiveness of the proposed techniques using a suite of five large graphs with
+varied characteristics and five popular graph algorithms.
+</p>
         </div>
       
 
