--- a/research.html
+++ b/research.html
@@ -114,8 +114,8 @@ I work on designing approximation techniques for parallel graph algorithms on GP
 <p style="color:black">
 <h3><u>Publications</u>
  <span style="float:right;font-weight:bold; font-size:18px;">
- [<a href= "https://dblp.uni-trier.de/pers/hd/s/Singh:Somesh" target="_blank"> (DBLP)</a>, 
- <a href= "https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank"> (Google Scholar)</a> ]
+ [<a href= "https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank">(DBLP)</a>, 
+ <a href= "https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank">(Google Scholar)</a> ]
  </span>
  </h3>
 
