--- a/research.html
+++ b/research.html
@@ -235,7 +235,7 @@ This contribution presents the status of the code, summarizes the main existing 
 Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in ICPP 2020. (<em>To Appear</em>)</h4>
+<h4 style="font-size: 13pt">in ICPP 2020. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#icpp20" aria-expanded="false" aria-controls="icpp20">
    (abstract) 
