--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
         </div>
 -->
             <div class="col-lg-12">
-<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Research </h3>
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Dissertation Research </h3>
 </br>
 <blockquote class="blockquote" style="background:#eff">
       <p>
@@ -110,6 +110,14 @@ truth is possible. &#34; </i>
 <!-- <p>
 I work on designing approximation techniques for parallel graph algorithms on GPU to improve performance.
 </p> -->
+
+<p style="color:black">
+<!-- Scaling graph analytics is challenging. -->
+My dissertation research focuses on accelerating parallel graph processing using approximate computing. I design techniques for improving the efficiency of graph analytics on Graphics Processing Units (GPUs) by trading-off computational accuracy.
+When the graph sizes are huge (e.g., billion-scale networks), or the underlying processing is expensive, it is not always feasible to compute the exact solution in time. A practical question to ask in such scenarios is: "given an infrastructure, how to make the best use of resources to obtain an acceptable, inexact solution in a reasonable time?"
+I seek to answer this question by bringing parallelism and approximate computing into a convergent trajectory to make heavy-weight graph computation practical and scalable.
+</p>
+
 
 <p style="color:black">
 <h3><u>Publications</u>
