--- a/research.html
+++ b/research.html
@@ -129,6 +129,57 @@ I seek to answer this question by bringing parallelism and approximate computing
 
 </p>
 
+
+<h3 style="font-size: 16pt">
+Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
+</h3>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
+<h4 style="font-size: 13pt">in ICPP 2020. </h4>
+<p style="font-size: 11pt">
+  <a data-toggle="collapse" href="#icpp20" aria-expanded="false" aria-controls="icpp20">
+   (abstract) 
+  </a>
+
+  <a href="docs/papers/icpp20.pdf" target="_blank">(pdf)</a>
+  <a href="https://doi.org/10.1145/3404397.3404406" target="_blank">(doi)</a>
+</p>
+
+<p class="collapse" id="icpp20" style="font-size: 11pt">
+Parallelizing graph algorithms on GPUs is challenging due to the irregular memory accesses involved in graph traversals. In particular,
+three important GPU-specific aspects affect performance: memory coalescing, memory latency, and thread divergence. In this work,
+we attempt to tame these challenges using approximate computing. We target graph applications on GPUs that can tolerate some degradation in the quality of the output, for obtaining the result in short order. We propose three techniques for boosting the performance
+of graph processing on the GPU by injecting approximations in a controlled manner. The first one creates a graph isomorph that
+brings relevant nodes nearby in memory and adds controlled replica of nodes to improve coalescing. The second reduces memory latency by facilitating the processing of subgraphs inside shared memory by adding edges among specific nodes and processing
+well-connected subgraphs iteratively inside shared memory. The third technique normalizes degrees across nodes assigned to a warp
+to reduce thread divergence. Each of the techniques offers notable performance benefits, and provides a knob to control the amount of
+inaccuracy added to an execution. We demonstrate the effectiveness of the proposed techniques using a suite of five large graphs with
+varied characteristics and five popular graph algorithms.
+</p>
+
+<h3 style="font-size: 16pt">
+Optimizing Graph Processing on GPUs using Approximate Computing: Poster
+</h3>
+<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
+<h4 style="font-size: 13pt">in PPoPP 2019.</h4>
+<p style="font-size: 11pt">
+  <a data-toggle="collapse" href="#ppopp19" aria-expanded="false" aria-controls="ppopp19">
+   (abstract) 
+  </a>
+
+  <a href="docs/papers/ppopp19.pdf" target="_blank">(pdf)</a>
+  <a href="https://doi.org/10.1145/3293883.3295736" target="_blank">(doi)</a>
+</p>
+
+<p class="collapse" id="ppopp19" style="font-size: 11pt">
+Parallelizing graph algorithms on GPUs is challenging due to the irregular memory accesses and control-flow involved in
+graph traversals. In this work, we tame these challenges by injecting approximations. In particular, we improve memory
+coalescing by renumbering and replicating nodes, memory latency by adding edges among specific nodes brought into
+shared memory, and thread-divergence by normalizing degrees across nodes assigned to a warp. Using a suite of graphs
+with varied characteristics and five popular algorithms, we demonstrate the effectiveness of our proposed techniques.
+Our approximations for coalescing, memory latency and thread-divergence lead to mean speedups of 1.3&times;, 1.41&times; and 1.06&times; achieving accuracies of 83&percnt;, 78&percnt; and 84&percnt;, respectively.
+</p>
+
+
 <h3 style="font-size: 16pt">
 Scalable and Performant Graph Processing on GPUs using Approximate Computing
 </h3>
@@ -150,6 +201,58 @@ expensive. In this work, we address the scalability issues in graph parallelizat
 tolerating a little approximation in the computation. We study the effects of four heuristic approximations on six graph algorithms with
 five graphs and show that if an application allows for small inaccuracy, this can be leveraged to achieve considerable performance
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
+</p>
+
+
+<hr />
+
+<h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Other Projects </h3>
+</br>
+
+<div style="font-size:16px;">
+<ul>
+
+<li>
+ <dl>
+      Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
+      <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
+ </em></a>
+ <span style="float:right;font-weight:normal; font-style:italic">
+ <a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank">         <em>SixTrack, CERN-HSF</em> </a>
+ </span>
+ <p style="font-size:16px; display:list-item; list-style-type: circle; list-style-  position:inside;">  <!-- color:#00A598"-->
+ Developed a standalone parallel implementation of (a part of) SixTrackLib.
+ The contributed code is available
+ <a href="https://github.com/ssomesh/sixtracklib_gsoc18/tree/master/"               target="_blank"> 
+     here</a>.
+ </p>
+ </dl>
+ </li> 
+
+
+	
+<li>
+<dl>
+        Google Summer of Code 2017 : <a href= "https://summerofcode.withgoogle.com/archive/2017/projects/6549039684255744/" target="_blank"> 
+        <em>Smart Data Structures in CUDA</em> </a>
+<span style="float:right;font-weight:normal; font-style:italic">
+<a href= "http://hepsoftwarefoundation.org/activities/gsoc.html" target="_blank"> 
+       <em>CMS, CERN-HSF</em> </a>
+</span>
+<p style="font-size:16px; display:list-item; list-style-type: circle; list-         style-position:inside;">
+ Developed 
+<a href= "https://github.com/ssomesh/SALLOC/tree/master" target="_blank"> 
+        <em>SALLOC</em> </a>
+-- An arena based memory allocator for SIMT architectures. 
+ </p>
+
+</dl>
+</li>
+
+</div>
+
+<p style="color:black">
+<h3><u>Publications</u>
 </p>
 
 <h3 style="font-size: 16pt">
@@ -184,28 +287,6 @@ The tracking routines are implemented in a parametrized C code that is specialis
 This contribution presents the status of the code and an outlook on future developments of SixTrack, SixDesk, and SixTrackLib.
  </p>
 
-<h3 style="font-size: 16pt">
-Optimizing Graph Processing on GPUs using Approximate Computing: Poster
-</h3>
-<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in PPoPP 2019.</h4>
-<p style="font-size: 11pt">
-  <a data-toggle="collapse" href="#ppopp19" aria-expanded="false" aria-controls="ppopp19">
-   (abstract) 
-  </a>
-
-  <a href="docs/papers/ppopp19.pdf" target="_blank">(pdf)</a>
-  <a href="https://doi.org/10.1145/3293883.3295736" target="_blank">(doi)</a>
-</p>
-
-<p class="collapse" id="ppopp19" style="font-size: 11pt">
-Parallelizing graph algorithms on GPUs is challenging due to the irregular memory accesses and control-flow involved in
-graph traversals. In this work, we tame these challenges by injecting approximations. In particular, we improve memory
-coalescing by renumbering and replicating nodes, memory latency by adding edges among specific nodes brought into
-shared memory, and thread-divergence by normalizing degrees across nodes assigned to a warp. Using a suite of graphs
-with varied characteristics and five popular algorithms, we demonstrate the effectiveness of our proposed techniques.
-Our approximations for coalescing, memory latency and thread-divergence lead to mean speedups of 1.3&times;, 1.41&times; and 1.06&times; achieving accuracies of 83&percnt;, 78&percnt; and 84&percnt;, respectively.
-</p>
 
 
 <h3 style="font-size: 16pt">
@@ -237,33 +318,6 @@ The SixDesk runtime environment allows the user to manage the large batches of s
 SixTrackLib is a new library aimed at providing a portable and flexible tracking engine for single- and multi-particle problems using the models and formalism of SixTrack. The library is able to run in CPUs as well as graphical processing units (GPUs). 
 This contribution presents the status of the code, summarizes the main existing features and provides details about the main development lines SixTrack, SixDesk and SixTrackLib.
  </p>
-
-
-<h3 style="font-size: 16pt">
-Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
-</h3>
-<h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in ICPP 2020. </h4>
-<p style="font-size: 11pt">
-  <a data-toggle="collapse" href="#icpp20" aria-expanded="false" aria-controls="icpp20">
-   (abstract) 
-  </a>
-
-  <a href="docs/papers/icpp20.pdf" target="_blank">(pdf)</a>
-  <a href="https://doi.org/10.1145/3404397.3404406" target="_blank">(doi)</a>
-</p>
-
-<p class="collapse" id="icpp20" style="font-size: 11pt">
-Parallelizing graph algorithms on GPUs is challenging due to the irregular memory accesses involved in graph traversals. In particular,
-three important GPU-specific aspects affect performance: memory coalescing, memory latency, and thread divergence. In this work,
-we attempt to tame these challenges using approximate computing. We target graph applications on GPUs that can tolerate some degradation in the quality of the output, for obtaining the result in short order. We propose three techniques for boosting the performance
-of graph processing on the GPU by injecting approximations in a controlled manner. The first one creates a graph isomorph that
-brings relevant nodes nearby in memory and adds controlled replica of nodes to improve coalescing. The second reduces memory latency by facilitating the processing of subgraphs inside shared memory by adding edges among specific nodes and processing
-well-connected subgraphs iteratively inside shared memory. The third technique normalizes degrees across nodes assigned to a warp
-to reduce thread divergence. Each of the techniques offers notable performance benefits, and provides a knob to control the amount of
-inaccuracy added to an execution. We demonstrate the effectiveness of the proposed techniques using a suite of five large graphs with
-varied characteristics and five popular graph algorithms.
-</p>
         </div>
       
 
