--- a/misc.html
+++ b/misc.html
@@ -89,7 +89,8 @@
             <div class="col-lg-12">
 <h3 style="border-bottom: 1px solid black;padding-bottom:4px"> Miscellaneous </h3>
 
-<h3>Accomplishments and Awards</h3>
+<!--<h3>Accomplishments and Awards</h3> -->
+<h3>Accomplishments</h3>
 <!-- Pic saying page is under construction-->
 <!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
@@ -99,15 +100,44 @@
 
 <li>
 <dl>
-  Awarded 
-  <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
-     <em>Google Cloud Platform </em></a>
-  research credits.
-  <span style="float:right;font-weight:normal; font-style:italic">
-    2020
-  </span>
+  Awarded <em>ACM SIGPLAN PAC</em> grant for attending 
+  <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
 </dl>
 </li>
+
+
+<li>
+<dl>
+    <em>STAR TA Award</em> for contributions as a Teaching Assistant to "GPU Programming" course.
+       <span style="float:right; font-weight:normal; font-style: italic;"> November 2017 </span>
+</dl>
+</li>
+
+
+<li>
+<dl>
+        Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+
+<li>
+<dl>
+        Secured <b>4th place</b>  in HiPC 2015 Student Parallel Programming Challenge (Intel track).
+</dl>
+</li>
+
+</div>
+
+</hr>
+
+<h3>Services</h3>
+<!-- Pic saying page is under construction-->
+<!--
+     <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
+-->
+<div style="font-size:18px;">
+<ul>
+
 
 <li>
 <dl>
@@ -120,15 +150,6 @@
 	
 </dl>
 </li>
-
-
-<li>
-<dl>
-  Awarded <em>ACM SIGPLAN PAC</em> grant for attending 
-  <a href= "https://ppopp19.sigplan.org/" target="_blank">PPoPP 2019</a>.
-</dl>
-</li>
-
 
 
 <li>
@@ -152,6 +173,11 @@
 </dl>
 </li>
 	
+
+<li>
+<dl>
+    Organizer for <em>CUDA Workshop</em> in <em>Exebit 2018</em> at IIT Madras.
+</dl>
 </li>
 
 <li>
@@ -163,18 +189,7 @@
 </dl>
 </li>
 
-
-<li>
-<dl>
-        Secured <b>4th place</b> in HiPC 2016 Student Parallel Programming Challenge (Intel track).
-</dl>
-</li>
-
-<li>
-<dl>
-        Secured <b>4th place</b>  in HiPC 2015 Student Parallel Programming Challenge (Intel track).
-</dl>
-</li>
+<ul>
 
 </div>
 
