--- a/research.html
+++ b/research.html
@@ -213,6 +213,18 @@ benefits. We also study the effects of the approximations on GPU-based processin
 <ul>
 
 <li>
+<dl>
+  Awarded 
+  <a href= "https://edu.google.com/programs/?modal_active=none" target="_blank"> 
+     <em>Google Cloud Platform </em></a>
+  research credits.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2020
+  </span>
+</dl>
+</li>
+
+<li>
  <dl>
       Google Summer of Code 2018 : <a href= "https://summerofcode.withgoogle.com/archive/2018/projects/5152248673861632/" target="_blank"> 
       <em>Optimize and Integrate Standalone Tracking Library (SixTrackLib)
