--- a/misc.html
+++ b/misc.html
@@ -130,7 +130,7 @@
 
 </hr>
 
-<h3>Services</h3>
+<h3>Professional Service</h3>
 <!-- Pic saying page is under construction-->
 <!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p>
