--- a/academics.html
+++ b/academics.html
@@ -163,7 +163,7 @@
     <!-- <span style="font-weight:normal; float: right"> June  2016 </span> -->
     </dt>
     <dd style="font-size:14px">
-    Instructors: <a href="http://web.cse.ohio-state.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
+    Instructors: <a href="https://www.cs.utah.edu/~saday/" target="_blank"> <i> Prof.</i> P. Sadayappan </a> and
     <a href="http://www.cse.iitm.ac.in/~rupesh/" target="_blank"> Dr. Rupesh Nasre </a>
     </dd>
     </dl>
