recent Services updated

--- a/misc.html
+++ b/misc.html
@@ -138,6 +138,30 @@
 <div style="font-size:18px;">
 <ul>
 
+<li>
+<dl>
+     Committee Member in 
+  <a href= "https://ppopp21.sigplan.org/committee/PPoPP-2021-artifact-evaluation-committee" target="_blank"> 
+       Artifact Evaluation Committee </a>
+     for 
+  <a href= "https://ppopp21.sigplan.org/" target="_blank"> 
+        PPoPP 2021 </a>
+	
+</dl>
+</li>
+
+
+<li>
+<dl>
+     Student Volunteer (SV) for
+  <a href= "https://2020.splashcon.org/" target="_blank"> 
+       SPLASH</a>
+     /
+  <a href= "https://2020.ecoop.org/" target="_blank"> 
+       ECOOP 2020</a>
+	
+</dl>
+</li>
 
 <li>
 <dl>
