adding icpp 2020 presentation link

--- a/research.html
+++ b/research.html
@@ -142,6 +142,7 @@ Graffix: Efficient Graph Processing with a Tinge of GPU-Specific Approximations
 
   <a href="docs/papers/icpp20.pdf" target="_blank">(pdf)</a>
   <a href="https://doi.org/10.1145/3404397.3404406" target="_blank">(doi)</a>
+  <a href="https://www.youtube.com/watch?v=KwydMszR5Bg" target="_blank">(video)</a>
 </p>
 
 <p class="collapse" id="icpp20" style="font-size: 11pt">
