--- a/misc.html
+++ b/misc.html
@@ -235,6 +235,27 @@
 <h3> Talks </h3>
 
 <div style="font-size:18px;">
+<ul>
+
+<li>
+<dl>
+[Virtual] Talk at Queen’s University, Belfast. 
+  <span style="float:right;font-weight:normal; font-style:italic">
+    May 2021
+  </span>
+</dl>
+</li>
+
+
+<li>
+<dl>
+[Virtual] Talk at Lawrence Berkeley National Laboratory.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    March 2021
+  </span>
+</dl>
+</li>
+
 </div>
 
         </div>
