--- a/misc.html
+++ b/misc.html
@@ -239,7 +239,10 @@
 
 <li>
 <dl>
-[Virtual] Talk at Queen’s University, Belfast. 
+[Virtual] 
+  <a href= "https://blogs.qub.ac.uk/graphprocessing/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
+       Talk </a>
+at Queen’s University, Belfast. 
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
   </span>
@@ -249,7 +252,10 @@
 
 <li>
 <dl>
-[Virtual] Talk at Lawrence Berkeley National Laboratory.
+[Virtual] 
+  <a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank"> 
+       Talk </a>
+at Lawrence Berkeley National Laboratory.
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2021
   </span>
