post phd updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <![endif]-->
 
       <!-- Adding a favicon -->
-	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" />
+<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> -->
+	<link rel="shortcut icon" href="img/favicon_s.png" type="image/x-icon" />
 
 </head>
 
@@ -38,12 +39,12 @@
 
     <div class="container">
 	<h1 style="font-size:5rem; margin-bottom: 0.2rem;">Somesh Singh</h1>				
-
+<!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
 	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
 	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
 	</h4> 
-
+-->
     	   <nav class="navbar navbar-inverse navbar-static-top" >
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -96,7 +97,8 @@
                 </ul>
  -->
         <p>
-	Welcome! I am a Ph.D. student in the department of 
+	Welcome! 
+<!-- I am a Ph.D. student in the department of 
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
 Computer Science and Engineering 
 </a>
@@ -105,12 +107,17 @@ at
 IIT Madras</a>. 
 I am advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
-My research focuses on designing techniques for accelerating large-scale graph analytics on <!-- <em>large</em> graphs using --> GPUs, aided by approximate computing.
+My research focuses on designing techniques for accelerating large-scale graph analytics on -->
+<!-- <em>large</em> graphs using --> 
+<!-- GPUs, aided by approximate computing.-->
+I received my Ph.D. from the 
+<a href="http://www.cse.iitm.ac.in/" target="_blnk">
+Indian Institute of Technology Madras</a>. I was advised by 
+<a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
         </p>
 	 <p>
-        I graduated from 
-<a href = "http://nituk.ac.in/" target="_blank">NIT Uttarakhand</a> 
-in 2014 with a B.Tech. in Computer Science and Engineering.
+        I obtained my Bachelor's degree from 
+<a href = "http://nituk.ac.in/" target="_blank">NIT Uttarakhand</a>.
         </p>
 
 	<hr />
@@ -119,10 +126,10 @@ in 2014 with a B.Tech. in Computer Science and Engineering.
 
 	<p>
 	  Somesh Singh <br/>
-	<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
+	<!--<a href = "http://pace.cse.iitm.ac.in/" target="_blank"> PACE Lab</a>,
 	  BSB 331-A <br/>
 	  Dept. of CSE<br/>
-	  IIT Madras - 600 036.<br/>
+	  IIT Madras - 600 036.<br/> -->
     Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
 	</p>
         <p>
