--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Somesh Singh Ph.D. IIT webpage">
+    <meta name="description" content="Somesh Singh webpage">
     <meta name="author" content="Somesh">
 
     <title>Somesh Singh</title>
@@ -38,7 +38,7 @@
     <!-- Navigation -->
 
     <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 0.2rem;">Somesh Singh</h1>				
+	<h1 style="font-size:5rem; margin-bottom: 1em;">Somesh Singh</h1>				
 <!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
 	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
@@ -63,9 +63,11 @@
                     <li >
                         <a href="research.html">research</a>
                     </li>
+                  <!--
                     <li>
                         <a href="academics.html">academics</a>
                     </li>
+                  -->
                     <li>
                         <a href="mentor.html">mentoring</a>
                     </li>
