post phd updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- Navigation -->
 
     <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 1em;">Somesh Singh</h1>				
+	<h1 style="font-size:5rem; margin-bottom: 0.3em;">Somesh Singh</h1>				
 <!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
 	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
@@ -118,8 +118,8 @@ Indian Institute of Technology Madras</a>. I was advised by
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
         </p>
 	 <p>
-        I obtained my Bachelor's degree from 
-<a href = "http://nituk.ac.in/" target="_blank">NIT Uttarakhand</a>.
+        I obtained my Bachelor's from the
+<a href = "http://nituk.ac.in/" target="_blank">National Institute of Technology Uttarakhand</a>.
         </p>
 
 	<hr />
