--- a/research.html
+++ b/research.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Somesh Singh Ph.D. IIT webpage">
+    <meta name="description" content="Somesh Singh webpage">
     <meta name="author" content="Somesh">
 
     <title>Somesh Singh</title>
@@ -28,7 +28,8 @@
     <![endif]-->
 
       <!-- Adding a favicon -->
-	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" />
+<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> -->
+	<link rel="shortcut icon" href="img/favicon_s.png" type="image/x-icon" />
 
 </head>
 
@@ -37,13 +38,13 @@
     <!-- Navigation -->
 
     <div class="container">
-	<h1 style="font-size:5rem; margin-bottom: 0.2rem;">Somesh Singh</h1>				
-
+	<h1 style="font-size:5rem; margin-bottom: 0.3em;">Somesh Singh</h1>				
+<!--
 	<h4 style="margin-top: 0.3rem; margin-left: 0.5rem; margin-bottom:1em;">PhD Candidate,
 	 <a href = "http://www.cse.iitm.ac.in/" target="_blank">CSE</a>, 
 	 <a href = "https://www.iitm.ac.in/" target="_blank">IITM</a>
 	</h4> 
-
+-->
     	   <nav class="navbar navbar-inverse navbar-static-top" >
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -52,7 +53,8 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                  </button> 
+                  <!--jQuery is required for the toggle button to work -->
                 <a class="navbar-brand initialism" href="index.html"> about me</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -61,9 +63,11 @@
                     <li >
                         <a href="research.html">research</a>
                     </li>
+                  <!--
                     <li>
                         <a href="academics.html">academics</a>
                     </li>
+                  -->
                     <li>
                         <a href="mentor.html">mentoring</a>
                     </li>
