--- a/index.html
+++ b/index.html
@@ -116,12 +116,14 @@ I received my Ph.D. from the
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
 Indian Institute of Technology Madras</a>. I was advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
+My research interests span the areas of high-performance computing, parallel computing and high-performance graph analytics.
         </p>
+<!--
 	 <p>
-        I obtained my Bachelor's from the
+        I obtained my Bachelor's in Computer Science and Engineering from the
 <a href = "http://nituk.ac.in/" target="_blank">National Institute of Technology Uttarakhand</a>.
         </p>
-
+-->
 	<hr />
 
 	<h3>Contact:</h3>
