--- a/research.html
+++ b/research.html
@@ -29,7 +29,7 @@
 
       <!-- Adding a favicon -->
 <!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> -->
-	<link rel="shortcut icon" href="img/favicon_s.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" />
 
 </head>
 
