--- a/research.html
+++ b/research.html
@@ -28,8 +28,8 @@
     <![endif]-->
 
       <!-- Adding a favicon -->
-<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> -->
-	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" />
+<!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> 
+	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> -->
 
 </head>
 
