adding talk at FORTH-ICS

--- a/misc.html
+++ b/misc.html
@@ -239,6 +239,18 @@
 <li>
 <dl>
 [Virtual] 
+  <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank"> 
+       Talk </a>
+at FORTH-ICS.
+  <span style="float:right;font-weight:normal; font-style:italic">
+    July 2021
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+[Virtual] 
   <a href= "https://blogs.qub.ac.uk/graphprocessing/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
        Talk </a>
 at Queen’s University, Belfast. 
@@ -247,7 +259,6 @@ at Queen’s University, Belfast.
   </span>
 </dl>
 </li>
-
 
 <li>
 <dl>
@@ -260,6 +271,7 @@ at Lawrence Berkeley National Laboratory.
   </span>
 </dl>
 </li>
+
 
 </ul>
 
