adding links for the talk

--- a/misc.html
+++ b/misc.html
@@ -240,8 +240,10 @@
 <dl>
 [Virtual] 
   <a href= "https://www.ics.forth.gr/lecture/15243" target="_blank"> 
-       Talk </a>
-at FORTH-ICS.
+       Talk</a>
+ at 
+  <a href= "https://www.ics.forth.gr" target="_blank"> 
+       FORTH-ICS</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     July 2021
   </span>
@@ -252,8 +254,10 @@ at FORTH-ICS.
 <dl>
 [Virtual] 
   <a href= "https://blogs.qub.ac.uk/graphprocessing/efficient-parallel-graph-processing-on-gpu-using-approximate-computing-by-somesh-singh/" target="_blank"> 
-       Talk </a>
-at Queen’s University, Belfast. 
+       Talk</a>
+ at 
+  <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
+  Queen’s University, Belfast</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
   </span>
@@ -263,9 +267,12 @@ at Queen’s University, Belfast.
 <li>
 <dl>
 [Virtual] 
-  <a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank"> 
-       Talk </a>
-at Lawrence Berkeley National Laboratory.
+  <!--<a href= "https://stratcomm-elements.lbl.gov/berkeley-lab-events-calendar/" target="_blank">-->
+  <a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
+       Talk</a>
+ at 
+  <a href= "https://crd.lbl.gov/departments/computer-science/" target="_blank"> 
+Lawrence Berkeley National Laboratory</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2021
   </span>
