editing the link

--- a/misc.html
+++ b/misc.html
@@ -271,7 +271,7 @@
   <a href= "https://crd.lbl.gov/resources/computing-sciences-seminars/" target="_blank">
        Talk</a>
  at 
-  <a href= "https://crd.lbl.gov/departments/computer-science/" target="_blank"> 
+  <a href= "https://crd.lbl.gov/" target="_blank"> 
 Lawrence Berkeley National Laboratory</a>.
   <span style="float:right;font-weight:normal; font-style:italic">
     March 2021
