--- a/misc.html
+++ b/misc.html
@@ -30,6 +30,7 @@
       <!-- Adding a favicon -->
 <!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> 
 	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> -->
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
 
 </head>
 
