--- a/misc.html
+++ b/misc.html
@@ -213,7 +213,8 @@
 <li>
 <dl>
     Organizer for <em>CUDA Workshop</em> in <em>Exebit 2018</em> at IIT Madras.
-  <a href="docs/slides/cuda-workshop.pdf" target="_blank">(slides)</a>
+
+  <a href="docs/slides/cuda-workshop.pdf" target="_blank">[Slides]</a>
 </dl>
 </li>
 
@@ -246,7 +247,8 @@
  at 
   <a href= "https://www.ics.forth.gr" target="_blank"> 
        FORTH-ICS</a>.
-  <a href="docs/slides/Somesh_Talk_FORTH.pdf" target="_blank">(slides)</a>
+
+  <a href="docs/slides/Somesh_Talk_FORTH.pdf" target="_blank">[Slides]</a>
   <span style="float:right;font-weight:normal; font-style:italic">
     July 2021
   </span>
@@ -261,7 +263,8 @@
  at 
   <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
   Queen’s University, Belfast</a>. 
-  <a href="docs/slides/Somesh_Talk_Belfast.pdf" target="_blank">(slides)</a>
+
+  <a href="docs/slides/Somesh_Talk_Belfast.pdf" target="_blank">[Slides]</a>
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
   </span>
