--- a/misc.html
+++ b/misc.html
@@ -214,7 +214,7 @@
 <dl>
     Organizer for <em>CUDA Workshop</em> in <em>Exebit 2018</em> at IIT Madras.
 
-  <a href="docs/slides/cuda-workshop.pdf" target="_blank">[Slides]</a>
+ <!-- <a href="docs/slides/cuda-workshop.pdf" target="_blank">[Slides]</a>-->
 </dl>
 </li>
 
@@ -248,7 +248,7 @@
   <a href= "https://www.ics.forth.gr" target="_blank"> 
        FORTH-ICS</a>.
 
-  <a href="docs/slides/Somesh_Talk_FORTH.pdf" target="_blank">[Slides]</a>
+  <!--<a href="docs/slides/Somesh_Talk_FORTH.pdf" target="_blank">[Slides]</a>-->
   <span style="float:right;font-weight:normal; font-style:italic">
     July 2021
   </span>
@@ -264,7 +264,7 @@
   <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
   Queen’s University, Belfast</a>. 
 
-  <a href="docs/slides/Somesh_Talk_Belfast.pdf" target="_blank">[Slides]</a>
+  <!--<a href="docs/slides/Somesh_Talk_Belfast.pdf" target="_blank">[Slides]</a>-->
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
   </span>
