--- a/research.html
+++ b/research.html
@@ -123,9 +123,11 @@ When the graph sizes are huge (e.g., billion-scale networks), or the underlying 
 I seek to answer this question by bringing parallelism and approximate computing into a convergent trajectory to make heavy-weight graph computation practical and scalable.
 </p>
 
+<p style="font-size:14px;">
 [<a href="docs/thesis/thesis.pdf" target="_blank">PhD thesis</a>]
 
 [<a href="docs/thesis/phd_defense_slides.pdf" target="_blank">PhD defense slides</a>]
+</p>
 
 <p style="color:black">
 <h3><u>Publications</u>
