removing defence presentation

--- a/research.html
+++ b/research.html
@@ -126,7 +126,7 @@ I seek to answer this question by bringing parallelism and approximate computing
 <p style="font-size:16px;">
 [<a href="docs/thesis/thesis.pdf" target="_blank">PhD thesis</a>]
 
-[<a href="docs/thesis/phd_defense_slides.pdf" target="_blank">PhD defense slides</a>]
+<!-- [<a href="docs/thesis/phd_defense_slides.pdf" target="_blank">PhD defense slides</a>] -->
 </p>
 
 <p style="color:black">
