adding buttons for dblp and g-scholar

--- a/research.html
+++ b/research.html
@@ -131,9 +131,15 @@ I seek to answer this question by bringing parallelism and approximate computing
 
 <p style="color:black">
 <h3><u>Publications</u>
- <span style="float:right;font-weight:bold; font-size:18px;">
- [ <a href= "https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank">(DBLP)</a>, 
- <a href= "https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank">(Google Scholar)</a> ]
+ <span style="float:right; font-size:18px;">
+ <button type="button" class="btn btn-primary btn-sm" style="font-size:15px;">
+ <a href="https://dblp.uni-trier.de/pers/hd/s/Singh_0001:Somesh" target="_blank" style="color:inherit">DBLP</a>
+ </button>
+ 
+ <button type="button" class="btn btn-primary btn-sm " style="font-size:15px;">
+ <a href="https://scholar.google.co.in/citations?user=nwsoib8AAAAJ&hl=en&oi=ao" target="_blank" style="color:inherit">Google Scholar</a>
+ </button>
+
  </span>
  </h3>
 
