--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ My research interests span the areas of high-performance computing, parallel com
     Email: {firstname} (dot) {lastname}1992 (at) gmail (dot) com<br/>
 	</p>
 <!--    <p>
-	   <b>I am currently on the job market.</b> <!-- (expected graduation: July 2020) --> 
+	   <b>I am currently on the job market.</b> (expected graduation: July 2020) 
 	</p>  -->
         </div>
       
