--- a/mentor.html
+++ b/mentor.html
@@ -95,6 +95,26 @@
 <!--
      <p style="text-align:center; "><img style="max-width: 50%; margin-top: 1rem;" src="./img/construction.gif" alt="under_construction" border="2" /></p> 
 -->
+
+ <h3>Events</h3>
+ <div style="font-size:16px;">
+ <ul>
+ <li>
+ <dl>
+   <dt> 
+      <a href = "https://www.gpuhackathons.org/event/c-dac-hpc-hackathon-2021" target="_blank">C-DAC HPC Hackathon 2021</a>
+        <span style="float:right;font-weight:normal; font-style: italic;"> July-August 2021  </span>    
+   </dt>
+<!--
+   <dd style="color:#C4820E;">
+       Approximate Betweenness Centrality
+   </dd>   
+-->
+ </dl> 
+ </li>
+ </ul>
+ </div>
+
  <h3>M.Tech Project</h3>
  <div style="font-size:16px;">
  <ul>
