--- a/misc.html
+++ b/misc.html
@@ -259,7 +259,7 @@
        Talk</a>
  at 
   <a href= "https://www.qub.ac.uk/schools/eeecs/" target="_blank"> 
-  Queen’s University, Belfast</a>. 
+  Queen’s University Belfast</a>. 
 
   <span style="float:right;font-weight:normal; font-style:italic">
     May 2021
