adding phd research tag cloud

--- a/research.html
+++ b/research.html
@@ -220,6 +220,8 @@ five graphs and show that if an application allows for small inaccuracy, this ca
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
 
+The tag-cloud provides an accurate representation of my Ph.D. research.
+
      <p style="text-align:center; "><img style="max-width: 40%; margin-top: 1rem;" src="./img/tag_cloud_phd.png" alt="dissertation_tag_cloud" border="1" /></p>
 
 <hr />
