--- a/research.html
+++ b/research.html
@@ -220,7 +220,9 @@ five graphs and show that if an application allows for small inaccuracy, this ca
 benefits. We also study the effects of the approximations on GPU-based processing and provide interesting takeaways.
 </p>
 
+<p style="color:black">
 The tag-cloud provides an accurate representation of my Ph.D. research.
+</p>
 
      <p style="text-align:center; "><img style="max-width: 40%; margin-top: 1rem;" src="./img/tag_cloud_phd.png" alt="dissertation_tag_cloud" border="1" /></p>
 
