adding phd research tag cloud

--- a/research.html
+++ b/research.html
@@ -221,7 +221,7 @@ benefits. We also study the effects of the approximations on GPU-based processin
 </p>
 
 <p style="color:black">
-The tag-cloud provides an accurate representation of my Ph.D. research.
+The tag-cloud provides an accurate representation of my Ph.D. research focus.
 </p>
 
      <p style="text-align:center; "><img style="max-width: 40%; margin-top: 1rem;" src="./img/tag_cloud_phd.png" alt="dissertation_tag_cloud" border="1" /></p>
