--- a/research.html
+++ b/research.html
@@ -153,7 +153,7 @@ The tag-cloud provides an accurate representation of my Ph.D. research focus.
 
 
 <h3 style="font-size: 16pt">
-ParTBC: Faster Estimation of Top-<em>k</em>$ Betweenness Centrality Vertices on GPU
+ParTBC: Faster Estimation of Top-<em>k</em> Betweenness Centrality Vertices on GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Tejas Shah,&#32;Rupesh Nasre,</i></h4>
 <h4 style="font-size: 13pt">in TODAES 2021. [To Appear]</h4>
