--- a/research.html
+++ b/research.html
@@ -162,8 +162,8 @@ ParTBC: Faster Estimation of Top-<em>k</em> Betweenness Centrality Vertices on G
    (abstract) 
   </a>
 
-  <a href="" target="_blank">(pdf)</a>
-  <a href="" target="_blank">(doi)</a>
+  <a href="#" target="_blank">(pdf)</a>
+  <a href="#" target="_blank">(doi)</a>
 </p>
 
 <p class="collapse" id="todaes21" style="font-size: 11pt">
