minor formatting changes

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ I am advised by
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
 <!-- <em>large</em> graphs using --> 
 <!-- GPUs, aided by approximate computing.-->
-I received my Ph.D. from the 
+I obtained my Ph.D. from the 
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
 Indian Institute of Technology Madras</a>. I was advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
