--- a/misc.html
+++ b/misc.html
@@ -140,7 +140,9 @@
 
 <li>
 <dl>
-        Reviewer for <em>Concurrency and Computation: Practice and Experience</em> 
+        Reviewer for <em></em> 
+  <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
+	  Concurrency and Computation: Practice and Experience</a>
   <span style="float:right;font-weight:normal; font-style:italic">
     2021
   </span>
@@ -154,7 +156,7 @@
        Artifact Evaluation Committee </a>
      for 
   <a href= "https://2021.ecoop.org/" target="_blank"> 
-        ECOOP 2021 </a>
+        ECOOP 2021</a>
 	
 </dl>
 </li>
@@ -166,7 +168,7 @@
        Artifact Evaluation Committee </a>
      for 
   <a href= "https://ppopp21.sigplan.org/" target="_blank"> 
-        PPoPP 2021 </a>
+        PPoPP 2021</a>
 	
 </dl>
 </li>
@@ -191,7 +193,7 @@
        Artifact Evaluation Committee </a>
      for 
   <a href= "https://2020.ecoop.org/" target="_blank"> 
-        ECOOP 2020 </a>
+        ECOOP 2020</a>
 	
 </dl>
 </li>
@@ -204,7 +206,7 @@
        Artifact Evaluation Committee </a>
      for 
   <a href= "https://ppopp18.sigplan.org/" target="_blank"> 
-        PPoPP 2018 </a>
+        PPoPP 2018</a>
 	
 </dl>
 </li>
