--- a/research.html
+++ b/research.html
@@ -156,18 +156,17 @@ The tag-cloud provides an accurate representation of my Ph.D. research focus.
 ParTBC: Faster Estimation of Top-<em>k</em> Betweenness Centrality Vertices on GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Tejas Shah,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in TODAES 2021. [To Appear]</h4>
+<h4 style="font-size: 13pt">in TODAES 2021. (<i>to appear</i>)</h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#todaes21" aria-expanded="false" aria-controls="todaes21">
    (abstract) 
   </a>
 
-  <a href="#" target="_blank">(pdf)</a>
-  <a href="#" target="_blank">(doi)</a>
+  <a href="#">(pdf)</a>
+  <a href="#">(doi)</a>
 </p>
 
 <p class="collapse" id="todaes21" style="font-size: 11pt">
-To Appear
 </p>
 
 <h3 style="font-size: 16pt">
