--- a/index.html
+++ b/index.html
@@ -115,7 +115,8 @@ My research focuses on designing techniques for accelerating large-scale graph a
 <!-- GPUs, aided by approximate computing.-->
 I obtained my Ph.D. from the 
 <a href="http://www.cse.iitm.ac.in/" target="_blnk">
-Indian Institute of Technology Madras</a>. I was advised by 
+Indian Institute of Technology Madras</a> under the supervision of
+<!--I was advised by --> 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
 My research interests span the areas of high-performance computing, parallel computing and high-performance graph analytics.
         </p>
