--- a/misc.html
+++ b/misc.html
@@ -141,6 +141,28 @@
 <li>
 <dl>
         Reviewer for <em></em> 
+  <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
+	  IEEE Transactions on Parallel and Distributed Systems</a>
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2021
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+        Reviewer for <em></em> 
+  <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
+	  Parallel Computing</a>
+  <span style="float:right;font-weight:normal; font-style:italic">
+    2021
+  </span>
+</dl>
+</li>
+
+<li>
+<dl>
+        Reviewer for <em></em> 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
 	  Concurrency and Computation: Practice and Experience</a>
   <span style="float:right;font-weight:normal; font-style:italic">
