--- a/misc.html
+++ b/misc.html
@@ -140,7 +140,7 @@
 
 <li>
 <dl>
-        Reviewer for <em></em> 
+        Reviewer for 
   <a href= "https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=71" target="_blank"> 
 	  IEEE Transactions on Parallel and Distributed Systems</a>
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -151,7 +151,7 @@
 
 <li>
 <dl>
-        Reviewer for <em></em> 
+        Reviewer for 
   <a href= "https://www.journals.elsevier.com/parallel-computing" target="_blank"> 
 	  Parallel Computing</a>
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -162,7 +162,7 @@
 
 <li>
 <dl>
-        Reviewer for <em></em> 
+        Reviewer for 
   <a href= "https://onlinelibrary.wiley.com/journal/15320634" target="_blank"> 
 	  Concurrency and Computation: Practice and Experience</a>
   <span style="float:right;font-weight:normal; font-style:italic">
@@ -251,7 +251,9 @@
 
 <li>
 <dl>
-        Reviewer for <em>IEEE Embedded Systems Letters</em> 
+        Reviewer for 
+  <a href= "https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=4563995" target="_blank"> 
+	 IEEE Embedded Systems Letters</a>
   <span style="float:right;font-weight:normal; font-style:italic">
     2017
   </span>
