--- a/mentor.html
+++ b/mentor.html
@@ -29,9 +29,8 @@
 
       <!-- Adding a favicon -->
 <!--	<link rel="shortcut icon" href="img/favicon_IIT-M.png" type="image/x-icon" /> 
-	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> 
-	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> -->
-	<link rel="shortcut icon" href="img/favicon_LIP.png" type="image/x-icon" />
+	<link rel="shortcut icon" href="img/favicon_s_blue.png" type="image/x-icon" /> -->
+	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" /> 
 
 </head>
 
