info about post-doc

--- a/index.html
+++ b/index.html
@@ -102,19 +102,22 @@
         <p>
 	Welcome! 
 <!-- I am a Ph.D. student in the department of 
-<a href="http://www.cse.iitm.ac.in/" target="_blnk">
+<a href="http://www.cse.iitm.ac.in/" target="_blank">
 Computer Science and Engineering 
 </a>
 at 
-<a href="http://www.iitm.ac.in/" target="_blnk">
+<a href="http://www.iitm.ac.in/" target="_blank">
 IIT Madras</a>. 
 I am advised by 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
 My research focuses on designing techniques for accelerating large-scale graph analytics on -->
 <!-- <em>large</em> graphs using --> 
 <!-- GPUs, aided by approximate computing.-->
+I am a post-doctoral researcher in the ROMA team of INRIA at 
+<a href="http://www.ens-lyon.fr/LIP/" target="_blank">LIP</a>, 
+ENS de Lyon. 
 I obtained my Ph.D. from the 
-<a href="http://www.cse.iitm.ac.in/" target="_blnk">
+<a href="http://www.cse.iitm.ac.in/" target="_blank">
 Indian Institute of Technology Madras</a> under the supervision of
 <!--I was advised by --> 
 <a href = "http://www.cse.iitm.ac.in/~rupesh/" target="_blank">Dr. Rupesh Nasre</a>. 
