--- a/research.html
+++ b/research.html
@@ -156,7 +156,7 @@ The tag-cloud provides an accurate representation of my Ph.D. research focus.
 ParTBC: Faster Estimation of Top-<em>k</em> Betweenness Centrality Vertices on GPU
 </h3>
 <h4 style="font-size: 13pt"><i>Somesh Singh,&#32;Tejas Shah,&#32;Rupesh Nasre,</i></h4>
-<h4 style="font-size: 13pt">in TODAES 2021. </h4>
+<h4 style="font-size: 13pt">in ACM TODAES 2021. </h4>
 <p style="font-size: 11pt">
   <a data-toggle="collapse" href="#todaes21" aria-expanded="false" aria-controls="todaes21">
    (abstract) 
