--- a/mentor.html
+++ b/mentor.html
@@ -152,7 +152,7 @@
 <li>
 <dl>
   <dt> Ronak Jayesh Shukla<span style="font-weight:normal;">, 
-	<a href = "http://www.vnit.ac.in/" target="_blank"> VNIT</a>, Nagpur </span>
+	<a href = "https://vnit.ac.in/" target="_blank"> VNIT</a>, Nagpur </span>
        <span style="float:right; font-weight:normal; font-style: italic;">June 2015 </span>
  </dt>
   <dd> 
